--- a/case studies/nhamador-ch2CS/index.html
+++ b/case studies/nhamador-ch2CS/index.html
@@ -19,8 +19,12 @@
   <li>Savor nightly fine dining with an ocean view</li>
 
   </ul>
-<p>Pacific Trails Resort<br/>12010 Pacific Trails Road<br />Zephyr, CA 95555 <br/><br />888-555-5555</p>
-<i><small>Copyright © 2020 Pacific Trails Resort</small></i>
-<br />
-<a href = "mailto: nathanial@amador.com"><i><small>nathanial@amador.com</small></i></a>
+  <div>
+    <p>Pacific Trails Resort<br/>12010 Pacific Trails Road<br />Zephyr, CA 95555 <br/><br />888-555-5555</p>
+  </div>
+  <footer>
+    <i><small>Copyright © 2020 Pacific Trails Resort</small></i>
+    <br />
+    <a href = "mailto: nathanial@amador.com"><i><small>nathanial@amador.com</small></i></a>
+  </footer>
   </body>
