--- a/case studies/nhamador-ch4CS/yurts.html
+++ b/case studies/nhamador-ch4CS/yurts.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <head>
-<h1>Pacific Trails Resort</h1>
-<nav>
- <a href="index.html">Home</a> |
- <a href="yurt.html">Yurts</a> |
- <a href="activities.html">Activities</a> |
- <a href="reservations.html">Reservations</a>
-</nav>
+  <link href="pacific.css"
+  rel="stylesheet">
   </head>
 <body>
+  <h1>Pacific Trails Resort</h1>
+  <nav>
+   <a href="index.html">Home</a> |
+   <a href="yurts.html">Yurts</a> |
+   <a href="activities.html">Activities</a> |
+   <a href="reservations.html">Reservations</a>
+  </nav>
   <h2>The Yurts at Pacific Trails</h2>
   <dt><strong>What is a yurt?</strong></dt>
   <dd>
@@ -24,6 +26,7 @@
     </dd>
     <footer>
       <i><small>Copyright © 2020 Pacific Trails Resort</small></i>
+      <br />
       <a href = "mailto: nathanial@amador.com"><i><small>nathanial@amador.com</small></i></a>
     </footer>
 
