--- a/case studies/nhamador-ch5CS/yurts.html
+++ b/case studies/nhamador-ch5CS/yurts.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <head>
-<h1>Pacific Trails Resort</h1>
-<nav>
- <a href="index.html">Home</a> |
- <a href="yurt.html">Yurts</a> |
- <a href="activities.html">Activities</a> |
- <a href="reservations.html">Reservations</a>
-</nav>
+  <link href="pacific.css"
+  rel="stylesheet">
   </head>
 <body>
+  <h1>Pacific Trails Resort</h1>
+  <nav>
+   <a href="index.html">Home</a> |
+   <a href="yurts.html">Yurts</a> |
+   <a href="activities.html">Activities</a> |
+   <a href="reservations.html">Reservations</a>
+  </nav>
+  <div>
+    <img src="yurt.jpg", alt="sunset", width=100%, height=100% />
+  </div>
   <h2>The Yurts at Pacific Trails</h2>
   <dt><strong>What is a yurt?</strong></dt>
   <dd>
@@ -23,8 +28,9 @@
     Most guests pack comfortable walking shoes and plan to dress for changing weather with light layers of clothing. It's also helpful to bring a flashlight and a sense of adventure!
     </dd>
     <footer>
-      <i><small>Copyright © 2020 Pacific Trails Resort</small></i>
-      <a href = "mailto: nathanial@amador.com"><i><small>nathanial@amador.com</small></i></a>
+      Copyright © 2020 Pacific Trails Resort
+      <br />
+      <a href = "mailto: nathanial@amador.com">nathanial@amador.com</a>
     </footer>
 
 
