--- a/hw/nhamador-ch7CS/index.html
+++ b/hw/nhamador-ch7CS/index.html
@@ -8,19 +8,22 @@
   <div id="wrapper">
 
       <header>
-        <h1>Pacific Trails Resort</h1>
+        <h1><a href="index.html">Pacific Trails Resort </a></h1>
       </header>
       <nav>
-       <a href="index.html">Home</a> |
-       <a href="yurts.html">Yurts</a> |
-       <a href="activities.html">Activities</a> |
-       <a href="reservations.html">Reservations</a>
+        <ul>
+          <li> <a href="index.html">Home</a> | </li>
+          <li> <a href="yurts.html">Yurts</a> | </li>
+          <li> <a href="activities.html">Activities</a> | </li>
+          <li> <a href="reservations.html">Reservations</a> </li>
+        </ul>
+
       </nav>
       <div id="homehero">
         <img src="coast.jpg", alt="sunset", width=100%, height=100% />
       </div>
 
-
+    <main>
     <h2>Enjoy Nature in Luxury</h2>
     <p> <span class = "resort"> Pacific Trails Resort </span> offers a special lodging experience on the California North Coast with panoramic views of the Pacific Ocean. Your stay at Pacific Trails Resort includes a sumptuously appointed private yurt and a cooked-to-order breakfast each morning</p>
   <ul>
@@ -33,6 +36,7 @@
     <div id="contact" >
       <p> <span class = "resort"> Pacific Trails Resort </span><br/>12010 Pacific Trails Road<br />Zephyr, CA 95555 <br/><br />888-555-5555</p>
     </div>
+  </main>
     <footer>
       Copyright © 2020 Pacific Trails Resort
       <br />
