working on site

--- a/portfolioSite/index.html
+++ b/portfolioSite/index.html
@@ -14,4 +14,10 @@
         <a href="shop.html">Shop</a> |
         <a href="contactMe.html">Contact Me</a> |
     </nav>
+    <h2>Explore my Art</h2>
+    <p>
+      As an interdisciplinary artist, I work in several different mediums.
+      Painting allows for transparency and abstraction much easier than drawing does.
+      </p> <!-- expand on this much more -->
+
 </body>
