--- a/portfolioSite/contactMe.html
+++ b/portfolioSite/contactMe.html
@@ -7,13 +7,27 @@
         <h1>Areuador</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="aboutMe.html">About Me</a> |
-        <a href="programming.html">Programming</a> |
-        <a href="drawing.html">Drawing</a> |
-        <a href="shop.html">Shop</a> |
-        <a href="contactMe.html">Contact Me</a> |
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutMe.html">About Me</a></li>
+        <li><a href="programming.html">Programming</a></li>
+        <li><a href="drawing.html">Drawing</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="contactMe.html">Contact Me</a></li>
+      </ul>
     </nav>
- 
+    <form action="https://webdevbasics.net/scripts/pacific.php" method="post">
+      <label for="myFName">* First Name:</label>
+      <input type="text" id="myFName" name="myFName" required>
+      <label for="myLName">* Last Name:</label>
+      <input type="text" id="myLName" name="myLName" required>
+      <label for="myEmail">* Email Address:</label>
+      <input type="text" id="myEmail" name="myEmail" required
+      <label for="myComments">* Comments:</label>
+      <input type="text" id="myComments" name="myComments" rows="2" cols="30"
+          required>
+      <input type="submit" value="Submit" >
+      </form>
+
 
 </body>
