--- a/portfolioSite/drawing.html
+++ b/portfolioSite/drawing.html
@@ -14,69 +14,83 @@
         <a href="shop.html">Shop</a> |
         <a href="contactMe.html">Contact Me</a> |
     </nav>
-    <div class ="imageWrapper">
-        <div class="image">
-            <img src= "drawings/00.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/01.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/02.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/03.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/04.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/05.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/06.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/07.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/08.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/09.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/10.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/11.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/12.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/13.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/14.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/15.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/16.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/17.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/18.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/19.jpg" alt="00" width="285" height="400"
-        </div>
-        <div class="image">
-            <img src= "drawings/20.jpg" alt="00" width="285" height="400"
-        </div>
-    </div>
+<imgCatalog>
+    <ul>
+        <li>
+            <img src= "drawings/00.jpg" alt="00" />
+        </li>
+        <li>
+            <img src= "drawings/01.jpg" alt="00" />
+        </li>
+        <li>
+            <img src= "drawings/02.jpg" alt="00" />
+        </li>
+        <li>
+            <img src= "drawings/03.jpg" alt="00" />
+        </li>
+        <li>
+            <img src= "drawings/04.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/05.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/06.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/07.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/08.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/09.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/10.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/11.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/12.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/13.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/14.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/15.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/16.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/17.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/18.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/19.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/20.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/21.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/22.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/23.jpg" alt="00"  />
+        </li>
+        <li>
+            <img src= "drawings/24.jpg" alt="00"  />
+        </li>
+    </ul>
+  </imgCatalog>
 </body>
