--- a/portfolioSite/aboutMe.html
+++ b/portfolioSite/aboutMe.html
@@ -1,17 +1,21 @@
 <head>
+    <meta charset="utf-8">
     <link href="style.css"
     rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Areuador</h1>
-    </header>
+    <header> </header>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="aboutMe.html">About Me</a> |
-        <a href="programming.html">Programming</a> |
-        <a href="drawing.html">Drawing</a> |
-        <a href="shop.html">Shop</a> |
-        <a href="contactMe.html">Contact Me</a> |
+      <div class="topnav">
+        <a href="index.html" style="font-size:30px;background-color:#ff9d00">AREUADOR</a>
+        <a href="aboutMe.html">About Me</a>
+        <a href="programming.html">Programming</a>
+        <a href="drawing.html">Drawing</a>
+        <a href="painting.html">Painting</a>
+        <a href="videoArt.html">Video Art</a>
+        <a href="shop.html">Shop</a>
+        <a href="contactMe.html">Contact Me</a>
+      </div>
     </nav>
-</body>
+    <br>
+  </body>
