--- a/portfolioSite/contactMe.html
+++ b/portfolioSite/contactMe.html
@@ -1,22 +1,25 @@
 <head>
+    <meta charset="utf-8">
     <link href="style.css"
     rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Areuador</h1>
-    </header>
+    <header> </header>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="aboutMe.html">About Me</a></li>
-        <li><a href="programming.html">Programming</a></li>
-        <li><a href="drawing.html">Drawing</a></li>
-        <li><a href="shop.html">Shop</a></li>
-        <li><a href="contactMe.html">Contact Me</a></li>
-      </ul>
+      <div class="topnav">
+        <a href="index.html" style="font-size:30px;background-color:#ff9d00">AREUADOR</a>
+        <a href="aboutMe.html">About Me</a>
+        <a href="programming.html">Programming</a>
+        <a href="drawing.html">Drawing</a>
+        <a href="painting.html">Painting</a>
+        <a href="videoArt.html">Video Art</a>
+        <a href="shop.html">Shop</a>
+        <a href="contactMe.html">Contact Me</a>
+      </div>
     </nav>
-    <form action="https://webdevbasics.net/scripts/pacific.php" method="post">
+    <br>
+
+    <form action="https://webdevbasics.net/scripts/pacific.php" method="post"> <!-- need action page-->
       <label for="myFName">* First Name:</label>
       <input type="text" id="myFName" name="myFName" required>
       <label for="myLName">* Last Name:</label>
@@ -28,6 +31,6 @@
           required>
       <input type="submit" value="Submit" >
       </form>
-
-
 </body>
+
+
