--- a/portfolioSite/drawing.html
+++ b/portfolioSite/drawing.html
@@ -1,95 +1,99 @@
 <head>
+    <meta charset="utf-8">
     <link href="style.css"
     rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Areuador</h1>
-    </header>
+    <header> </header>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="aboutMe.html">About Me</a> |
-        <a href="programming.html">Programming</a> |
-        <a href="drawing.html">Drawing</a> |
-        <a href="shop.html">Shop</a> |
-        <a href="contactMe.html">Contact Me</a> |
+      <div class="topnav">
+        <a href="index.html" style="font-size:30px;background-color:#ff9d00">AREUADOR</a>
+        <a href="aboutMe.html">About Me</a>
+        <a href="programming.html">Programming</a>
+        <a href="drawing.html">Drawing</a>
+        <a href="painting.html">Painting</a>
+        <a href="videoArt.html">Video Art</a>
+        <a href="shop.html">Shop</a>
+        <a href="contactMe.html">Contact Me</a>
+      </div>
     </nav>
+    <br>
 <imgCatalog>
     <ul>
         <li>
             <img src= "drawings/00.jpg" alt="00" />
         </li>
         <li>
-            <img src= "drawings/01.jpg" alt="00" />
+            <img src= "drawings/01.jpg" alt="01" />
         </li>
         <li>
-            <img src= "drawings/02.jpg" alt="00" />
+            <img src= "drawings/02.jpg" alt="02" />
         </li>
         <li>
-            <img src= "drawings/03.jpg" alt="00" />
+            <img src= "drawings/03.jpg" alt="03" />
         </li>
         <li>
-            <img src= "drawings/04.jpg" alt="00"  />
+            <img src= "drawings/04.jpg" alt="04"  />
         </li>
         <li>
-            <img src= "drawings/05.jpg" alt="00"  />
+            <img src= "drawings/05.jpg" alt="05"  />
         </li>
         <li>
-            <img src= "drawings/06.jpg" alt="00"  />
+            <img src= "drawings/06.jpg" alt="06"  />
         </li>
         <li>
-            <img src= "drawings/07.jpg" alt="00"  />
+            <img src= "drawings/07.jpg" alt="07"  />
         </li>
         <li>
-            <img src= "drawings/08.jpg" alt="00"  />
+            <img src= "drawings/08.jpg" alt="08"  />
         </li>
         <li>
-            <img src= "drawings/09.jpg" alt="00"  />
+            <img src= "drawings/09.jpg" alt="09"  />
         </li>
         <li>
-            <img src= "drawings/10.jpg" alt="00"  />
+            <img src= "drawings/10.jpg" alt="10"  />
         </li>
         <li>
-            <img src= "drawings/11.jpg" alt="00"  />
+            <img src= "drawings/11.jpg" alt="11"  />
         </li>
         <li>
-            <img src= "drawings/12.jpg" alt="00"  />
+            <img src= "drawings/12.jpg" alt="12"  />
         </li>
         <li>
-            <img src= "drawings/13.jpg" alt="00"  />
+            <img src= "drawings/13.jpg" alt="13"  />
         </li>
         <li>
-            <img src= "drawings/14.jpg" alt="00"  />
+            <img src= "drawings/14.jpg" alt="14"  />
         </li>
         <li>
-            <img src= "drawings/15.jpg" alt="00"  />
+            <img src= "drawings/15.jpg" alt="15"  />
         </li>
         <li>
-            <img src= "drawings/16.jpg" alt="00"  />
+            <img src= "drawings/16.jpg" alt="16"  />
         </li>
         <li>
-            <img src= "drawings/17.jpg" alt="00"  />
+            <img src= "drawings/17.jpg" alt="17"  />
         </li>
         <li>
-            <img src= "drawings/18.jpg" alt="00"  />
+            <img src= "drawings/18.jpg" alt="18"  />
         </li>
         <li>
-            <img src= "drawings/19.jpg" alt="00"  />
+            <img src= "drawings/19.jpg" alt="19"  />
         </li>
         <li>
-            <img src= "drawings/20.jpg" alt="00"  />
+            <img src= "drawings/20.jpg" alt="20"  />
         </li>
         <li>
-            <img src= "drawings/21.jpg" alt="00"  />
+            <img src= "drawings/21.jpg" alt="21"  />
         </li>
         <li>
-            <img src= "drawings/22.jpg" alt="00"  />
+            <img src= "drawings/22.jpg" alt="22"  />
         </li>
         <li>
-            <img src= "drawings/23.jpg" alt="00"  />
+            <img src= "drawings/23.jpg" alt="23"  />
         </li>
         <li>
-            <img src= "drawings/24.jpg" alt="00"  />
+            <img src= "drawings/24.jpg" alt="24"  />
         </li>
     </ul>
   </imgCatalog>
