--- a/portfolioSite/programming.html
+++ b/portfolioSite/programming.html
@@ -18,4 +18,99 @@
       </div>
     </nav>
     <br>
+    <div id="vidContainer">
+      <div>
+        <video width="400" height="400" loop autoplay controls>
+          <source src="programming/00.webm" type="video/webm">
+        Your browser does not support the video tag.
+        </video> 
+        <br>
+        <a href="https://openprocessing.org/sketch/1257391">messing aroundddd </a>
+      </div>  
+      <div>
+        <video width="400" height="400" loop autoplay controls>
+          <source src="programming/01.webm" type="video/webm">
+        Your browser does not support the video tag.
+        </video> 
+        <br>
+        <a href="https://openprocessing.org/sketch/1257409">Random Eyes</a>
+      </div>
+      
+      <div>
+        <video width="400" height="400" loop autoplay controls>
+          <source src="programming/02.webm" type="video/webm">
+        Your browser does not support the video tag.
+        </video> 
+        <br>
+        <a href="https://openprocessing.org/sketch/1348465">Cat Lockscreen</a>
+      </div>  
+       <div>
+        <video width="400" height="400" loop autoplay controls>
+          <source src="programming/03.webm" type="video/webm">
+        Your browser does not support the video tag.
+        </video> 
+        <br>
+        <a href="https://openprocessing.org/sketch/1024638">swagger v2</a>
+      </div>
+      <div>
+        <video width="400" height="400" loop autoplay controls>
+          <source src="programming/04.webm" type="video/webm">
+        Your browser does not support the video tag.
+        </video> 
+        <br>
+        <a href="https://openprocessing.org/sketch/1010259">gloopy stretch</a>
+      </div>
+      <div>
+        <video width="400" height="400" loop autoplay controls>
+          <source src="programming/05.webm" type="video/webm">
+        Your browser does not support the video tag.
+        </video> 
+        <br>
+        <a href="https://openprocessing.org/sketch/1022636">im melting aaaah</a>
+      </div>
+      <div>
+        <video width="400" height="400" loop autoplay controls>
+          <source src="programming/06.webm" type="video/webm">
+        Your browser does not support the video tag.
+        </video> 
+        <br>
+        <a href="https://openprocessing.org/sketch/1022654">what do you see</a>
+      </div>
+      <div>
+        <video width="400" height="400" loop autoplay controls>
+          <source src="programming/07.webm" type="video/webm">
+        Your browser does not support the video tag.
+        </video> 
+        <br>
+        <a href="https://openprocessing.org/sketch/1024636">swagger </a>
+      </div>
+      <div>
+        <video width="400" height="400" loop autoplay controls>
+          <source src="programming/08.webm" type="video/webm">
+        Your browser does not support the video tag.
+        </video> 
+        <br>
+        <a href="https://openprocessing.org/sketch/1022643">its aliveeeee</a>
+      </div>
+      <div>
+        <video width="400" height="400" loop autoplay controls>
+          <source src="programming/09.webm" type="video/webm">
+        Your browser does not support the video tag.
+        </video> 
+        <br>
+        <a href="https://openprocessing.org/sketch/1022675">swag</a>
+      </div>
+      <div>
+        <video width="400" height="400" loop autoplay controls>
+          <source src="programming/10.webm" type="video/webm">
+        Your browser does not support the video tag.
+        </video> 
+        <br>
+        <a href="https://openprocessing.org/sketch/1022649">tv static bnw</a>
+      </div>
+    </div> 
+
+
+
+
   </body>
