--- a/portfolioSite/videoArt.html
+++ b/portfolioSite/videoArt.html
@@ -18,4 +18,14 @@
       </div>
     </nav>
     <br>
+    <div id="vidContainer">
+    <div style="padding-top:1em;">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/yS3fyaFyMo4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p>In this piece I focused on over consumption and how when healthy habits are done in excess, they become unnatural and 
+        destructive.<br> This piece is best shown projected on a wall and looped. 
+      </p>
+    </div>
+    
+ 
+  </div>
   </body>
