--- a/hw/nhamador-ch11CS/index.html
+++ b/hw/nhamador-ch11CS/index.html
@@ -28,7 +28,7 @@
       <video width="320" height="240" controls>
         <source src="resources/PacificTrailsResort.mp4" type="video/mp4">
         <source src="resources/PacificTrailsResort.ogv" type="video/ogv">
-        <source src="resources/pacifictrailsresort.swf" type="video/swf">
+        <source src="resources/pacifictrailsresort.mov" type="video/mov">
       <!--  <source src="pacifictrailsresort.jpg" type="video/jpg"> -->
           <!-- not sure if I did jpg side correctly -->
          Your browser does not support the video tag.
