--- a/hw/nhamador-ch11CS/yurts.html
+++ b/hw/nhamador-ch11CS/yurts.html
@@ -19,7 +19,7 @@
         <li> <a href="reservations.html">Reservations</a></li>
       </ul>
     </nav>
-    <div id="trailhero">
+    <div id="yurthero">
       
     </div>
     <main>
