--- a/portfolioSite/aboutMe.html
+++ b/portfolioSite/aboutMe.html
@@ -1,9 +1,15 @@
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Nathan Amador About me">
+    <meta name="keywords" content="Nathan, Amador, Art, Drawing, Painting, Portfolio">
+    <meta name="author" content="Nathan Amador">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="style.css"
     rel="stylesheet">
 </head>
 <body>
+ 
     <header> </header>
     <nav>
       <div class="topnav">
@@ -18,5 +24,24 @@
       </div>
     </nav>
     <br>
-    
+    <header><h1>ABOUT ME</h1> </header>
+    <main>
+
+    <nathanPic>
+  
+    <img src = "me.jpg" alt="me"/>
+    <p>I am currently studying at Arizona State University for my Undergraduate Degree. I was born in 
+      Germany and moved around a lot as a kid and lived in Oklahoma, Hawaii, and finally Arizona. Some of my favorite painters are
+      Elaine and Willem de Kooning, Francis Bacon, Walter Battiss, and Graham Sutherland. I am currently exploring abstraction and
+      how far I can distort a symbol before we have trouble grasping it. Some of my favorite painitngs look like 
+      an almost complete mess at first, but the longer you focus on the piece the more it comes into focus. 
+    </p>
+  </nathanPic>
+</main>
   </body>
+  <footer>
+    Copyright © 2022 Nathan Amador
+    <br />
+    <a href = "mailto: nathanamador14@gmail.com">nathanamador14@gmail.com</a>
+    <a href = "https://www.instagram.com/areuador/">Instagram</a>
+  </footer>
