--- a/portfolioSite/index.html
+++ b/portfolioSite/index.html
@@ -1,5 +1,10 @@
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Nathan Amador Art Portfolio">
+    <meta name="keywords" content="Nathan, Amador, Art, Drawing, Painting, Portfolio">
+    <meta name="author" content="Nathan Amador">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="style.css"
     rel="stylesheet">
 </head>
@@ -18,17 +23,31 @@
       </div>
     </nav>
     <br>
-    <h2>Explore my Art</h2>
+    <header><h1>HOME</h1> </header>
+    <main>
     <imgCatalog>
         <ul>
             <li>
-                <!-- temporary solution -->
+                
                 <img src="paintings/02.jpg" alt="bull painting">
+      
             </li>
+            <p>
+              As an interdisciplinary artist, I work in several different mediums including painting, illustration, programmable art,
+              and video art. Working in several mediums at the same time allows me to understand the specific boundaires of each one 
+              and then play around and push those boundaries. Some of my favorite subjects are animals such as birds, frogs, and bulls.
+              I like to play around in the region between abstract and not abstract art, using recognizable symbols and distorting them 
+              to leave room for the viewer to interpret. I believe art is best when it is provacative but also vague and open ended 
+              at some points, leaving room for many interpretations of the piece.
+              </p> <!-- expand on this much more -->
         </ul>
+
     </imgCatalog>
-    <p>
-      As an interdisciplinary artist, I work in several different mediums.
-      Painting allows for transparency and abstraction much easier than drawing does.
-      </p> <!-- expand on this much more -->
+  </main>
   </body>
+  <footer>
+    Copyright © 2022 Nathan Amador
+    <br />
+    <a href = "mailto: nathanamador14@gmail.com">nathanamador14@gmail.com</a>
+    <a href = "https://www.instagram.com/areuador/">Instagram</a>
+  </footer>
