--- a/portfolioSite/painting.html
+++ b/portfolioSite/painting.html
@@ -1,10 +1,14 @@
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Nathan Amador Painting">
+    <meta name="keywords" content="Nathan, Amador, Art, Drawing, Painting, Portfolio">
+    <meta name="author" content="Nathan Amador">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css"
     rel="stylesheet">
 </head>
 <body>
-    <header> </header>
+    
     <nav>
       <div class="topnav">
         <a href="index.html" style="font-size:30px;background-color:#ff9d00">AREUADOR</a>
@@ -19,57 +23,83 @@
     </nav>
     <br>
     <br>
+    <header><h1>PAINTING</h1> </header>
+    <main>
     <imgCatalog>
         <ul>
             <li>
+                <p>The sprawl of life</p>
                 <img src= "paintings/00.jpg" alt="00" />
             </li>
+            
             <li>
+                <p>Untitled</p>
                 <img src= "paintings/01.jpg" alt="01" /> <!--get better picture for this one-->
             </li>
             <li>
+                <p>Study of a Bull</p>
                 <img src= "paintings/02.jpg" alt="02" />
             </li>
             <li>
+                <p>Untitled</p>
                 <img src= "paintings/03.jpg" alt="03" />
             </li>
             <li>
+                <p>Another smile in the dark</p>
                 <img src= "paintings/04.jpg" alt="04"  />
             </li>
             <li>
+                <p>Study of a bull</p>
                 <img src= "paintings/05.jpg" alt="05"  />
             </li>
             <li>
+                <p>Study of a bull</p>
                 <img src= "paintings/06.jpg" alt="06"  />
             </li>
             <li>
+                <p>Many many cats</p>
                 <img src= "paintings/07.jpg" alt="07"  />
             </li>
             <li>
+                <p>Many many cats II</p>
                 <img src= "paintings/08.jpg" alt="08"  />
             </li>
             <li>
+                <p>cow I</p>
                 <img src= "paintings/09.jpg" alt="09"  />
             </li>
             <li>
+                <p>Ducklings</p>
                 <img src= "paintings/10.jpg" alt="10"  />
             </li>
             <li>
+                <p>Ducks on vacation</p>
                 <img src= "paintings/11.jpg" alt="11"  />
             </li>
             <li>
+                <p>Man's best friend</p>
                 <img src= "paintings/12.jpeg" alt="12"  />
             </li>
             <li>
+                <p>protrustion of fingers</p>
                 <img src= "paintings/13.jpg" alt="13"  />
             </li>
             <li>
+                <p>Study of hanging meat</p>
                 <img src= "paintings/14.jpg" alt="14"  /> <!-- I want finished version of this painting -->
             </li>
             <li>
+                <p>March of the penguins</p>
                 <img src= "paintings/15.jpg" alt="15"  />
             </li>
 
         </ul>
       </imgCatalog>
+    </main>
   </body>
+  <footer>
+    Copyright © 2022 Nathan Amador
+    <br />
+    <a href = "mailto: nathanamador14@gmail.com">nathanamador14@gmail.com</a>
+    <a href = "https://www.instagram.com/areuador/">Instagram</a>
+  </footer>
