--- a/portfolioSite/videoArt.html
+++ b/portfolioSite/videoArt.html
@@ -1,10 +1,14 @@
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Nathan Amador Video Art">
+    <meta name="keywords" content="Nathan, Amador, Art, Drawing, Painting, Portfolio">
+    <meta name="author" content="Nathan Amador">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css"
     rel="stylesheet">
 </head>
 <body>
-    <header> </header>
+    
     <nav>
       <div class="topnav">
         <a href="index.html" style="font-size:30px;background-color:#ff9d00">AREUADOR</a>
@@ -17,6 +21,8 @@
         <a href="contactMe.html">Contact Me</a>
       </div>
     </nav>
+    <header><h1>VIDEO ART</h1> </header>
+    <main>
     <br>
     <div id="vidContainer">
     <div style="padding-top:1em;">
@@ -28,4 +34,11 @@
     
  
   </div>
+  </main>
   </body>
+  <footer>
+    Copyright © 2022 Nathan Amador
+    <br />
+    <a href = "mailto: nathanamador14@gmail.com">nathanamador14@gmail.com</a>
+    <a href = "https://www.instagram.com/areuador/">Instagram</a>
+  </footer>
