--- a/portfolioSite/contactMe.html
+++ b/portfolioSite/contactMe.html
@@ -1,5 +1,9 @@
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Nathan Amador Contact Me">
+    <meta name="keywords" content="Nathan, Amador, Art, Drawing, Painting, Portfolio">
+    <meta name="author" content="Nathan Amador">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css"
     rel="stylesheet">
 </head>
@@ -18,8 +22,9 @@
       </div>
     </nav>
     <br>
-
-    <form action="https://webdevbasics.net/scripts/pacific.php" method="post"> <!-- need action page-->
+    <header><h1>CONTACT ME</h1> </header>
+    <main>
+    <form action="http://webdevbasics.net/scripts/demo.php" method="post"> <!-- need action page-->
       <label for="myFName">* First Name:</label>
       <input type="text" id="myFName" name="myFName" required>
       <label for="myLName">* Last Name:</label>
@@ -31,6 +36,13 @@
           required>
       <input type="submit" value="Submit" >
       </form>
+    </main> 
 </body>
+<footer>
+  Copyright © 2022 Nathan Amador
+  <br />
+  <a href = "mailto: nathanamador14@gmail.com">nathanamador14@gmail.com</a>
+  <a href = "https://www.instagram.com/areuador/">Instagram</a>
+</footer>
 
 
