--- a/portfolioSite/programming.html
+++ b/portfolioSite/programming.html
@@ -1,5 +1,9 @@
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Nathan Amador Programming">
+    <meta name="keywords" content="Nathan, Amador, Art, Drawing, Painting, Portfolio">
+    <meta name="author" content="Nathan Amador">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css"
     rel="stylesheet">
 </head>
@@ -18,6 +22,8 @@
       </div>
     </nav>
     <br>
+    <header><h1>PROGRAMMING</h1> </header>
+    <main>
     <div id="vidContainer">
       <div>
         <video width="400" height="400" loop autoplay controls>
@@ -112,5 +118,11 @@
 
 
 
-
+  </main>
   </body>
+  <footer>
+    Copyright © 2022 Nathan Amador
+    <br />
+    <a href = "mailto: nathanamador14@gmail.com">nathanamador14@gmail.com</a>
+    <a href = "https://www.instagram.com/areuador/">Instagram</a>
+  </footer>
